--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.13.4",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "framer-motion": "^10.16.16",
     "ioredis": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
